Kubernetes/templates/flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: master-thesis-project
  name: flask-app-service

spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: flask-app
