Kubernetes/templates/flask_ingress.yaml
apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: master-thesis-project
  name: flask-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetess.io/sll-redirect: "false"

spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: flask-app-service
                port:
                  number: 5000
            path: /
            pathType: Prefix
